--- a/caretmu-common/pom.xml
+++ b/caretmu-common/pom.xml
@@ -12,4 +12,13 @@
 
     <artifactId>caretmu-common</artifactId>
     <packaging>jar</packaging>
+
+    <!-- 依赖 -->
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+    </dependencies>
 </project>
