--- a/caretmu-dao/pom.xml
+++ b/caretmu-dao/pom.xml
@@ -12,4 +12,35 @@
 
     <artifactId>caretmu-dao</artifactId>
     <packaging>jar</packaging>
+
+    <!-- 依赖 -->
+    <dependencies>
+        <!-- 内部 -->
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-domain</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <!-- 外部 -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+    </dependencies>
 </project>
