--- a/caretmu-web/pom.xml
+++ b/caretmu-web/pom.xml
@@ -12,4 +12,48 @@
 
     <artifactId>caretmu-web</artifactId>
     <packaging>war</packaging>
+    <properties>
+        <spring.version>4.2.0.RELEASE</spring.version>
+    </properties>
+    <!-- 依赖 -->
+    <dependencies>
+        <!-- 内部 -->
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-domain</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-service</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <!-- 外部 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
