--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <system.version>${project.version}</system.version>
+    </properties>
     <modules>
         <module>caretmu-common</module>
         <module>caretmu-dao</module>
@@ -17,4 +20,22 @@
         <module>caretmu-web</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
