--- a/caretmu-common/pom.xml
+++ b/caretmu-common/pom.xml
@@ -13,12 +13,37 @@
     <artifactId>caretmu-common</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <slf4j.version>1.7.12</slf4j.version>
+        <commons-lang.version>3.4</commons-lang.version>
+        <commons-codec.version>1.3</commons-codec.version>
+    </properties>
     <!-- 依赖 -->
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <version>${commons-lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 </project>
