--- a/caretmu-web/src/main/webapp/WEB-INF/web.xml
+++ b/caretmu-web/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring-config.xml</param-value>
+        <param-value>classpath:spring/spring-cfg.xml</param-value>
     </context-param>
 
     <!-- 监听器 -->
@@ -27,7 +27,7 @@
 
     <!-- servlets -->
     <servlet>
-        <servlet-name>system-dispatcher</servlet-name>
+        <servlet-name>app-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -37,8 +37,38 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>system-dispatcher</servlet-name>
+        <servlet-name>app-mvc</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.htm</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.ico</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.js</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
