--- a/caretmu-service/pom.xml
+++ b/caretmu-service/pom.xml
@@ -2,18 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>caretmu-pro</artifactId>
         <groupId>com.caretmu</groupId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>caretmu-service</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- 内部 -->
         <dependency>
             <groupId>com.caretmu</groupId>
             <artifactId>caretmu-common</artifactId>
@@ -24,5 +25,13 @@
             <artifactId>caretmu-domain</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.caretmu</groupId>
+            <artifactId>caretmu-dao</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
+    <build>
+        <finalName>${project.artifactId}</finalName>
+    </build>
 </project>
