--- a/caretmu-web/src/main/resources/log4j.properties
+++ b/caretmu-web/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
-#定义根日志级别和输出端(定义了两个输出端)
-log4j.rootLogger=ERROR, console,caretmu
+#\u5B9A\u4E49\u6839\u65E5\u5FD7\u7EA7\u522B\u548C\u8F93\u51FA\u7AEF(\u5B9A\u4E49\u4E86\u4E24\u4E2A\u8F93\u51FA\u7AEF)
+log4j.rootLogger=, console,caretmu
 
-#定义第一个输出端，输出到控制台
+#\u5B9A\u4E49\u7B2C\u4E00\u4E2A\u8F93\u51FA\u7AEF\uFF0C\u8F93\u51FA\u5230\u63A7\u5236\u53F0DEBUG
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS}:[%-5p] %c(%L) - %m%n
 
-#定时第二个输出端，输出到文件,该文件最大空间为1000KB，超过1000KB后自动备份，生成新文件
+#\u5B9A\u65F6\u7B2C\u4E8C\u4E2A\u8F93\u51FA\u7AEF\uFF0C\u8F93\u51FA\u5230\u6587\u4EF6,\u8BE5\u6587\u4EF6\u6700\u5927\u7A7A\u95F4\u4E3A1000KB\uFF0C\u8D85\u8FC71000KB\u540E\u81EA\u52A8\u5907\u4EFD\uFF0C\u751F\u6210\u65B0\u6587\u4EF6
 log4j.appender.caretmu=org.apache.log4j.RollingFileAppender
 log4j.appender.caretmu.file=${webapp.root}/caretmu.log
 log4j.appender.caretmu.layout=org.apache.log4j.PatternLayout
@@ -14,7 +14,7 @@ log4j.appender.caretmu.layout.conversionPattern=%d{HH:mm:ss,SSS}:[%-5p] %c(%L) -
 log4j.appender.caretmu.MaxFileSize=1000KB
 log4j.appender.caretmu.MaxBackupIndex=10
 
-#定义具体某个包下的日志输出级别
+#\u5B9A\u4E49\u5177\u4F53\u67D0\u4E2A\u5305\u4E0B\u7684\u65E5\u5FD7\u8F93\u51FA\u7EA7\u522B
 log4j.logger.com.caretmu.service=ERROR,console,caretmu
 log4j.logger.com.caretmu.web=INFO,console,caretmu
 log4j.logger.org.springframework=ERROR,console
@@ -22,5 +22,5 @@ log4j.logger.org.springframework=ERROR,console
 log4j.logger.org.springframework.jdbc.support=DEBUG,console
 log4j.logger.org.springframework.scheduling=DEBUG,console
 
-#定义sql语句的输出级别
+#\u5B9A\u4E49sql\u8BED\u53E5\u7684\u8F93\u51FA\u7EA7\u522B
 log4j.logger.java.sql.Connection=DEBUG
