--- a/caretmu-common/pom.xml
+++ b/caretmu-common/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <commons-lang3.version>3.4</commons-lang3.version>
         <commons-codec.version>1.3</commons-codec.version>
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <guava.version>14.0-rc2</guava.version>
     </properties>
     <!-- 依赖 -->
@@ -29,6 +30,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
